# NPproject

./: .gitignore  CMakeLists.txt  chess.c  chess.glade  chess.h  handle.c  handle.h  main.c  myCSS.css  protocol.h  protocols.h  rename.sh  resize.sh  ui.c  ui.h
